@startuml ERD
!includeurl https://raw.githubusercontent.com/matthewjosephtaylor/plantuml-style/master/style.pu

title ERD

!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define primary_key(x) <b>x</b>
!define unique(x) <color:green>x</color>
!define not_null(x) <u>x</u>

hide methods
hide stereotypes

Table(User, "User") {
	primary_key(_id) ObjectId
	not_null(unique(email)) String
	not_null(unique(username)) String
	not_null(password) String
	name String
	avatar String
	roles String[]
}

Table(ExternalUser, "ExternalUser") {
	primary_key(_id) ObjectId
	not_null(user) User
	not_null(externalId) String
}

Table(Source, "Source") {
	primary_key(_id) ObjectId
	not_null(origin) String
	not_null(createdBy) User
	not_null(createdAt) Date
	fragments Virtual
}

Table(Word, "Word") {
	primary_key(_id) ObjectId
	not_null(unique(text)) String
	not_null(createdBy) User
	not_null(createdAt) Date
	fragments Virtual
}

Table(Fragment, "Fragment") {
	primary_key(_id) ObjectId
	not_null(start) Number
	not_null(end) Number
	not_null(active) Boolean
	not_null(word) Word
	not_null(source) Source
	not_null(createdBy) User
	not_null(createdAt) Date
}

Table(App, "App") {
	primary_key(_id) ObjectId
	not_null(name) String
	not_null(accessKey) String
	not_null(createdBy) User
	not_null(createdAt) Date
}

User "1" -- "*" ExternalUser
User "1" -- "*" Source
User "1" -- "*" Fragment
User "1" -- "*" Word
Fragment "*" -- "1" Source
Fragment "*" -- "1" Word


@enduml